# Bank_Marketing

./: .gitignore  pyproject.toml
notebook/: main.ipynb
