[project]
name = "bank-marketing"
version = "0.1.0"
description = ""
authors = [
    {name = "Heraldo Candido da Cruz",email = "hccruz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.4,<4.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.6.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "bank_marketing", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "ipykernel (>=7.3.0,<8.0.0)"
]
